2012-01-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lib.h, printversion.c, texmfmp.c: Report file offset bits.

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* setupvar.c (setupboundvariable): Warning message: the bad
	value can be from the environment or from texmf.cnf.

2011-10-11  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c [WIN32]: Slightly reformulate Byte order marks.

2011-10-07  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c: More changes to reduce diffs with W32TeX.

2011-10-04  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c: More changes to reduce diffs with W32TeX,
	for compilation with MS Visual Studio 2005.

2011-10-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c : remove unused free_shellcmdlist()

2011-10-04  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c (calledit): More changes to reduce diffs with W32TeX.

2011-10-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: write (sock, buff, n) and send (sock, buff, n, 0)
	for ipc_snd () are different in winsock.

2011-09-30  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c [Aleph]: Remove unused variable `eightbitp'.

2011-09-21  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c [IPC]: More changes to reduce diffs with W32TeX.

2011-09-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: Disable options -translate-file, -default-translate-file,
	and -8bit for Aleph. The option -kanji-internal=STRING is effective
	also for pTeX and epTeX.

2011-09-02  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c: More changes to reduce diffs with W32TeX.

2011-09-01  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c [WIN32]: Minor rewrite to reduce diffs with W32TeX.

2011-08-30  Akira Kakuto <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c [WIN32]: Remove a semicolon.

2011-08-29  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c [WIN32]: Allow to build TeX & Co as DLL.

2011-08-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Remove some (e-)pTeX cruft.
