@@ -1,3 +1,7 @@
+2012-01-30  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* printversion.c, texmfmp.c: Drop report of file offset bits.
+
 2012-01-17  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* lib.h, printversion.c, texmfmp.c: Report file offset bits.
